--- a/123.html
+++ b/123.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-Br
+<html lang="pt-Br"
 <head>
     <meta charset="UTF-8"
     <meta http-equiv="X-UA-Compactible" content="IE=edge">
@@ -7,8 +7,7 @@
     <title>Mauro Pires</title>
 </head>
 <body>
-    <h1>Bem-vindo ao Meu Site!</h1>
-    <h2>Meu nome é Mauro pires Tenho 19 Anos e moro em Monte sussego</h2>
+    <h1>Bem-vindo ao Meu Site! Meu nome é Mauro pires Tenho 19 Anos e moro em Monte sussego</h1>
     <p>Este é um exemplo de site estático hospedado na Vercel.</p>
 </body>
 </html>
